feat: Foi implementado a estrutuda de comunicação, criação e validação dos dados existentes. Também foi feita a injeção de dependencia para algumas classes.

--- a/src/Shared/MyWebAPIStudies.Exceptions/ResourceMessagesException.resx
+++ b/src/Shared/MyWebAPIStudies.Exceptions/ResourceMessagesException.resx
@@ -120,6 +120,9 @@
   <data name="EMAIL_EMPTY" xml:space="preserve">
     <value>O E-mail não pode ser vazio.</value>
   </data>
+  <data name="EMAIL_EXISTE" xml:space="preserve">
+    <value>O E-mail já foi cadastrado</value>
+  </data>
   <data name="FORMAT_EMAIL_INCORRECT" xml:space="preserve">
     <value>O formato do e-mail está incorreto.</value>
   </data>
